--- a/Avance Proyecto/nbproject/project.properties
+++ b/Avance Proyecto/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Avance_Proyecto
+application.vendor=dsiles
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Avance_Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Avance_Proyecto
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.29.jar=C:\\NetBeansProjects\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 includes=**
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Avance_Proyecto
-main.class=AvanceProyecto_1.RecibirSobre
+main.class=app.personajes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
